--- a/tasks/static/css/style.css
+++ b/tasks/static/css/style.css
@@ -1,7 +1,105 @@
+* {
+  margin: 0;
+
+  font-family: Arial;
+}
+
+header {
+  margin-top: 20px;
+  margin-bottom: 40px;
+
+  font-size: 25pt;
+  color: rgba(10,200,100, .7);
+  text-align: center;
+}
+
+.form-group {
+  margin: 0 auto;
+
+  width: 200px;
+  text-align: center;
+}
+
+input, select {
+  margin: 10px;
+  padding: 10px;
+
+  text-align: center;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 .25px 1px 0;
+
+  cursor: pointer;
+}
+
+input[type="submit"] {
+  padding-left: 20px;
+  padding-right: 20px;
+  background: rgba(0,250,0, .5);
+}
+
 .task {
   display: none;
 }
 
 .task:first-child {
   display: block;
+}
+
+.task h3 {
+  margin-bottom: 20px;
+}
+
+.succes_ask, .bad_ask {
+  padding: 10px;
+
+  border-radius: 5px;
+  color: rgba(0,250,0, 1);
+  background: rgba(0,0,0, .05);
+}
+
+.bad_ask {
+  color: rgba(250,0,0, 1);
+}
+
+.container {
+  margin: 0 auto;
+
+  width: 1021px;
+}
+
+@media screen and (max-width: 1025px) {
+  .container {
+    width: 700px;
+  }
+}
+
+@media screen and (max-width: 698px) {
+  .container  {
+    width: 500px;
+  }
+
+  .ask_result {
+    margin: 0 auto;
+
+    width: 300px;
+    text-align: center;
+
+    display: block;
+  }
+
+  input {
+    display: block;
+  }
+
+  .task * {
+    margin: 20px auto;
+  }
+
+}
+
+@media screen and (max-width: 530px) {
+  .container  {
+    width: 400px;
+  }
 }
