--- a/tasks/templates/tasks/base.html
+++ b/tasks/templates/tasks/base.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-  {% block index %}
-  {% endblock %}
+  <div class="container">
+    {% block index %}
+    {% endblock %}
 
-  {% block subject %}
-  {% endblock %}
+    {% block subject %}
+    {% endblock %}
+  </div>
   <script src="{% static 'js/jquery-3.2.1.js' %}"></script>
   <script src="{% static 'js/script.js' %}"></script>
 </body>
