--- a/tasks/templates/tasks/subject.html
+++ b/tasks/templates/tasks/subject.html
@@ -7,11 +7,11 @@
     <li class="task">
       <h3>{{ task.description }}</h3>
       <p>{{ task.variables }}</p>
-      <input type="text" name="ask-{{ forloop.counter }}" id="ask-{{ forloop.counter }}" placeholder="Введите сюда ответ, будьте внимательны">
+      <input type="text" name="ask-{{ forloop.counter }}" id="ask-{{ forloop.counter }}" placeholder="Введите сюда ответ, будьте внимательны" style="width: 250px;">
       <input type="text" name="dd" value="{{ task.id }}" style="display:none;">
       <input type="submit" name="send" value="Проверить" class="click_ask">
+      <input type="submit" class="next_task" value="Cледующее" style="background: rgba(100,100,200, .6);" class="click_next">
       <span class="ask_result"></span>
-      <button class="next_task">Следующее</button>
     </li>
   {% endfor %}
   <li class="task">
