--- a/new_data/templates/new_data/index.html
+++ b/new_data/templates/new_data/index.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,14 +6,78 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>new-data</title>
+  <style>
+  </style>
 </head>
 <body>
-  {{ html }}
-  <form method="post">
-    {% csrf_token %}
-    <label for="html"></label>
-    <textarea name="html" id="html"></textarea>
-    <input type="submit" value="Отправить">
-  </form>
+  <div class="form-to-ajax">
+    {{ form }}
+  </div>
+  <ul>
+    <li>
+      <form method="post">
+        {% csrf_token %}
+        <label for="html"></label>
+        <textarea name="html" id="html"></textarea>
+        <input type="submit" value="Отправить">
+      </form>
+    </li>
+    <li class="html">{{ html }}</li>
+  </ul>
+  <button class="all_right">Запарсить</button>
+
+  <script src="{% static 'js/jquery.js' %}"></script>
+  <script>
+  function getCookie(name) {
+      var cookieValue = null;
+      if (document.cookie && document.cookie != '') {
+          var cookies = document.cookie.split(';');
+          for (var i = 0; i < cookies.length; i++) {
+              var cookie = jQuery.trim(cookies[i]);
+              // Does this cookie string begin with the name we want?
+              if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                  cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                  break;
+              }
+          }
+      }
+      return cookieValue;
+  }
+
+  function csrfSafeMethod(method) {
+      // these HTTP methods do not require CSRF protection
+      return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+  }
+
+  $(function() {
+
+    var thtml = $('.html').text();
+    $('.html').html(thtml);
+
+    $('.all_right').click(function() {
+      var csrf_token = getCookie('csrftoken');
+      $.ajax({
+        url: '/new-data/ajax/',
+        type: 'POST',
+        data: {
+          html: $('.html').html(),
+          sub: $('.form-to-ajax select').val()
+        },
+        beforeSend: function(xhr, settings) {
+          if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+            xhr.setRequestHeader("X-CSRFToken", csrf_token);
+          }
+        },
+        success: function(data) {
+          if (data == "okay")
+            alert("Готово!");
+          else
+            alert(data);
+        }
+      });
+    });
+
+  });
+  </script>
 </body>
 </html>
